[project]
name = "langprompt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tao Yang", email = "swulling@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.3",
    "jinja2>=3.1.5",
    "openai>=1.59.5",
    "pydantic>=2.10.4",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
qianfan = [
    "qianfan>=0.4.12.2",
]

[project.scripts]
langprompt = "langprompt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=langprompt --cov-report=term-missing"
